PMM-2816 Fix word wrap bug for numeric cell

--- a/src/app/global-styles/grid-tables.scss
+++ b/src/app/global-styles/grid-tables.scss
@@ -43,7 +43,7 @@
 }
 
 .grid-table__row > *:first-child {
-  word-break: unset;
+  word-break: keep-all;
 }
 
 .grid-table__row--cursor {
